--- a/style.css
+++ b/style.css
@@ -55,3 +55,12 @@ body {
     opacity: 1;
     font-size: 1.5rem;
   }
+
+  .output {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 2rem;
+    
+  }
