feat: :zap: Modal
Added an ugly looking modal.

--- a/style.css
+++ b/style.css
@@ -67,3 +67,18 @@ body {
   .hidden {
     display: none;
   }
+
+.modal {
+  display: none;
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 100px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 50vw; 
+  height: 40vh; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
+}
